Add Task 8: with corrections, used Set, and skip() method